Fixed wrapping bug on narrow windows

--- a/BEIMA.Client/src/pages/Devices/AddDevicePage.module.css
+++ b/BEIMA.Client/src/pages/Devices/AddDevicePage.module.css
@@ -8,12 +8,12 @@
 
 }
 
-.addButton {
-  float: right;
-}
-
 .buttonGroup {
+  display: flex;
+  gap:10px;
+  flex-wrap: wrap;
   flex-direction: row;
+  justify-content: space-between;
 }
 
 .fileupload {
